--- a/ali_sonmez_multec_werkstuk2/Info.plist
+++ b/ali_sonmez_multec_werkstuk2/Info.plist
@@ -34,11 +34,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string></string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string></string>
 	<key>NSLocationWhenInUseUsageDescription</key>
+	<string></string>
+	<key>NSMainStoryboardFile</key>
 	<string></string>
 </dict>
 </plist>
